# sourceguard-cli

./: .env.example  .gitignore  .sourceguardignore.example  README.md  push_error.txt  push_log_final.txt  pyproject.toml  test_results.txt
.github/workflows/: .gitignore  .sourceguardignore.example  README.md  pyproject.toml  sourceguard.yml
backend/app/: main.py
backend/app/api/routes/: auth.py  github.py  scan.py
backend/app/core/: config.py  github_security.py  rate_limiter.py  security.py
backend/app/db/: models.py  session.py
backend/app/services/: github_service.py
frontend/: index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: FindingsTable.jsx  Navbar.jsx  ScanList.jsx
frontend/src/pages/: Dashboard.jsx  Login.jsx  Project.jsx
sourceguard/: cli.py  config.py  entropy.py  ignore.py  models.py  output.py  rules.py  scanner.py
sourceguard/client/: api.py
sourceguard/core/: orchestrator.py
sourceguard/detectors/: aws.py  base.py  database.py  entropy.py  private_keys.py  registry.py  stripe.py  tokens.py
tests/: test_scanner.py
